# hexlet_pytest

./: .gitignore  pyproject.toml
pytest_test_project/: example.py  stack.py
tests/: test_example.py  test_stack.py
