[tool.poetry]
name = "pytest-test-project"
version = "0.1.0"
description = ""
authors = ["Naumenko_Sergey <sergei.naumencko@yandex.ru>"]
readme = "README.md"
packages = [{include = "pytest_test_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
